src/App.css
.App {
  text-align: center;
}
body {
  background: linear-gradient(315deg, #f491ff 0%, #7b2ef0 100%);
  height: 100vh;
  font-family: monospace;
}

h1 {
  color: #ffffff;
  font-family: monospace;  
}
h5 { 
  color: black;
  font-family: monospace;  
}

.card {
  width: 500px;
  height: 500px;
  margin: 0 auto;
  background-color: #dee2e7;
  border-radius: 8px;
  z-index: 1;
  box-shadow: 0px 0px 20px 0px black;
  margin-top: 30px;
 }
 
 .tools {
  display: flex;
  align-items: center;
  padding: 9px;
 }
 
 .circle {
  padding: 0 4px;
 }
 
 .box {
  display: inline-block;
  align-items: center;
  width: 10px;
  height: 10px;
  padding: 1px;
  border-radius: 50%;
 }
 
 .red {
  background-color: #ff605c;
 }
 
 .yellow {
  background-color: #ffbd44;
 }
 
 .green {
  background-color: #00ca4e;
 }
 
 button {
  background-color: rgb(179, 156, 179);
  color: white;
  border: none;
  padding: 10px 15px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 15px;
  margin: 10px 2px;
  cursor: pointer;
  font-family: monospace;
  box-shadow: 0px 0px 2px 0px black;

 }
 input {
  border: none;
  padding: 10px 15px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 15px;
  margin: 10px 2px;
  font-family: monospace;

 }

 @media only screen and (max-width: 600px) {
  .App {
    margin-top: 50px;
  }
  .card {
    width: 300px;
    height: 500px;
    margin-top: 50px;
    background-color: #dee2e7;
    border-radius: 8px;
    z-index: 1;
   }
   
   .tools {
    display: flex;
    align-items: center;
    padding: 9px;
   }
   
   .circle {
    padding: 0 4px;
   }
   
   .box {
    display: inline-block;
    align-items: center;
    width: 10px;
    height: 10px;
    padding: 1px;
    border-radius: 50%;
   }
   button {
    background-color: rgb(179, 156, 179);
    color: white;
    border: none;
    padding: 5px 10px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 10px;
    margin: 10px 2px;
    cursor: pointer;
    font-family: monospace;
    box-shadow: 0px 0px 2px 0px black;
  
   }
   input {
    border: none;
    padding: 5px 10px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 10px;
    margin: 10px 2px;
    font-family: monospace;
  
   }
}

